--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           node-version: '20.8.1'
           registry-url: 'https://registry.npmjs.org'
+          always-auth: true
+          scope: '@lunnoa-automate'
 
       - name: Setup PNPM
         uses: pnpm/action-setup@v2
@@ -26,6 +28,8 @@ jobs:
         run: |
           pnpm up @lunnoa-automate/apps@latest @lunnoa-automate/toolkit@latest
           pnpm install --frozen-lockfile
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Build toolkit
         run: pnpm nx build toolkit
@@ -46,13 +50,13 @@ jobs:
           timeout=300  # 5 minutes timeout
           interval=10  # Check every 10 seconds
 
-          until curl -s "https://registry.npmjs.org/@lunnoa-automate/apps/$VERSION" | grep -q "version" || [ $timeout -le 0 ]; do
+          until curl -s -H "Authorization: Bearer ${{ secrets.NPM_TOKEN }}" "https://registry.npmjs.org/@lunnoa-automate/apps/$VERSION" | grep -q "version" || [ $timeout -le 0 ]; do
             echo "Package @lunnoa-automate/apps@$VERSION not yet available, waiting..."
             sleep $interval
             timeout=$((timeout - interval))
           done
 
-          until curl -s "https://registry.npmjs.org/@lunnoa-automate/toolkit/$VERSION" | grep -q "version" || [ $timeout -le 0 ]; do
+          until curl -s -H "Authorization: Bearer ${{ secrets.NPM_TOKEN }}" "https://registry.npmjs.org/@lunnoa-automate/toolkit/$VERSION" | grep -q "version" || [ $timeout -le 0 ]; do
             echo "Package @lunnoa-automate/toolkit@$VERSION not yet available, waiting..."
             sleep $interval
             timeout=$((timeout - interval))
