--- a/.github/workflows/deploy-server-production.yml
+++ b/.github/workflows/deploy-server-production.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   SERVER_REGISTRY: ghcr.io
-  SERVER_IMAGE_NAME: ${{ github.repository }}/server
+  SERVER_IMAGE_NAME: ${{ github.repository_owner }}/lunnoa_automate/server
   ECS_SERVICE: lunnoa-automate-server-core-service
   ECS_CLUSTER: lunnoa-automate-server-core
   ECS_TASK_DEFINITION: .aws/task-definition.json
@@ -56,12 +56,14 @@ jobs:
         env:
           VERSION: ${{ github.ref_name }}
         run: |
-          docker build -t ${{ env.SERVER_REGISTRY }}/${{ env.SERVER_IMAGE_NAME }}:$VERSION -f packages/server/Dockerfile .
-          docker tag ${{ env.SERVER_REGISTRY }}/${{ env.SERVER_IMAGE_NAME }}:$VERSION ${{ env.SERVER_REGISTRY }}/${{ env.SERVER_IMAGE_NAME }}:latest
-          docker push ${{ env.SERVER_REGISTRY }}/${{ env.SERVER_IMAGE_NAME }}:$VERSION
-          docker push ${{ env.SERVER_REGISTRY }}/${{ env.SERVER_IMAGE_NAME }}:latest
+          REPO_LOWERCASE=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+          
+          docker build -t ${{ env.SERVER_REGISTRY }}/$REPO_LOWERCASE/server:$VERSION -f packages/server/Dockerfile .
+          docker tag ${{ env.SERVER_REGISTRY }}/$REPO_LOWERCASE/server:$VERSION ${{ env.SERVER_REGISTRY }}/$REPO_LOWERCASE/server:latest
+          docker push ${{ env.SERVER_REGISTRY }}/$REPO_LOWERCASE/server:$VERSION
+          docker push ${{ env.SERVER_REGISTRY }}/$REPO_LOWERCASE/server:latest
 
-          echo "image=${{ env.SERVER_REGISTRY }}/${{ env.SERVER_IMAGE_NAME }}:$VERSION" >> $GITHUB_OUTPUT
+          echo "image=${{ env.SERVER_REGISTRY }}/$REPO_LOWERCASE/server:$VERSION" >> $GITHUB_OUTPUT
 
   deploy-to-ecs:
     name: Deploy to ECS
