--- a/.github/workflows/deploy-server-production.yml
+++ b/.github/workflows/deploy-server-production.yml
@@ -5,12 +5,13 @@ on:
     workflows: ['Publish NPM Packages']
     types:
       - completed
+  workflow_dispatch:
 
 env:
   SERVER_REGISTRY: ghcr.io
   SERVER_IMAGE_NAME: ${{ github.repository_owner }}/lunnoa_automate/server
-  ECS_SERVICE: lunnoa-automate-server-core-service
   ECS_CLUSTER: lunnoa-automate-server-core
+  ECS_SERVICE: lunnoa-automate-server-core-service
   ECS_TASK_DEFINITION: .aws/task-definition.json
   CONTAINER_NAME: lunnoa-automate-server-core
   AWS_REGION: eu-central-1
@@ -97,7 +98,30 @@ jobs:
           container-name: ${{ env.CONTAINER_NAME }}
           image: ${{ needs.build-and-push.outputs.image }}
 
-      - name: Deploy Amazon ECS task definition
+      - name: Check if ECS service exists
+        id: check-service
+        run: |
+          if aws ecs describe-services --cluster ${{ env.ECS_CLUSTER }} --services ${{ env.ECS_SERVICE }} | grep -q "MISSING"; then
+            echo "SERVICE_EXISTS=false" >> $GITHUB_OUTPUT
+          else
+            echo "SERVICE_EXISTS=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create ECS service if it doesn't exist
+        if: steps.check-service.outputs.SERVICE_EXISTS == 'false'
+        run: |
+          aws ecs create-service \
+            --cluster ${{ env.ECS_CLUSTER }} \
+            --service-name ${{ env.ECS_SERVICE }} \
+            --task-definition ${{ steps.task-def.outputs.task-definition }} \
+            --desired-count 1 \
+            --launch-type EC2 \
+            --scheduling-strategy REPLICA \
+            --deployment-configuration "maximumPercent=200,minimumHealthyPercent=100" \
+            --deployment-controller "type=ECS"
+
+      - name: Update ECS service if it exists
+        if: steps.check-service.outputs.SERVICE_EXISTS == 'true'
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
