feat: version adaption

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lecca-io",
-  "version": "1.91.0",
+  "name": "lunnoa-automate",
+  "version": "1.92.0",
   "license": "Apache-2.0 with Commons Clause",
   "repository": {
     "type": "git",
