feat: postgreSQL integration

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@dagrejs/dagre": "^1.1.4",
     "@faker-js/faker": "^8.4.1",
     "@hookform/resolvers": "^3.3.4",
+    "@lunnoa-automate/apps": "1.0.2",
+    "@lunnoa-automate/toolkit": "1.0.1",
     "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^10.4.8",
     "@nestjs/config": "^3.3.0",
@@ -55,8 +57,6 @@
     "@opentelemetry/sdk-node": "^0.57.0",
     "@pinecone-database/pinecone": "^4.0.0",
     "@prisma/client": "^5.22.0",
-    "@lunnoa-automate/toolkit": "1.0.1",
-    "@lunnoa-automate/apps": "1.0.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -90,6 +90,7 @@
     "@tiptap/extension-placeholder": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "@types/pg": "^8.15.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vapi-ai/web": "^2.1.7",
     "@vercel/analytics": "^1.2.2",
@@ -126,6 +127,7 @@
     "ollama-ai-provider": "^1.0.0",
     "openai": "^4.73.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.16.0",
     "raw-body": "^3.0.0",
     "react": "18.3.1",
     "react-day-picker": "^8.10.0",
