--- a/packages/apps/project.json
+++ b/packages/apps/project.json
@@ -25,6 +25,7 @@
       }
     },
     "nx-release-publish": {
+      "executor": "@nx/js:npm-publish",
       "options": {
         "packageRoot": "dist/{projectRoot}"
       }
