--- a/packages/toolkit/project.json
+++ b/packages/toolkit/project.json
@@ -25,8 +25,9 @@
       }
     },
     "nx-release-publish": {
+      "executor": "@nx/js:npm-publish",
       "options": {
-        "packageRoot": "dist/{projectRoot}"
+        "packageRoot": "dist/packages/toolkit"
       }
     }
   }
