feat: changed projectRoot

--- a/packages/toolkit/project.json
+++ b/packages/toolkit/project.json
@@ -27,7 +27,7 @@
     "nx-release-publish": {
       "executor": "@nx/js:npm-publish",
       "options": {
-        "packageRoot": "dist/packages/toolkit"
+        "packageRoot": "dist/{projectRoot}"
       }
     }
   }
