--- a/packages/apps/project.json
+++ b/packages/apps/project.json
@@ -27,7 +27,7 @@
     "nx-release-publish": {
       "executor": "@nx/js:npm-publish",
       "options": {
-        "packageRoot": "dist/packages/apps"
+        "packageRoot": "dist/{projectRoot}"
       }
     }
   }
