--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -33,7 +33,7 @@ jobs:
         run: pnpm nx run-many --target=build --projects=apps,toolkit
 
       - name: Publish toolkit
-        run: pnpm nx run toolkit:nx-release-publish
+        run: pnpm nx run toolkit:nx-release-publish --verbose
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NX_VERBOSE_LOGGING: true
