--- a/.github/workflows/deploy-ui-production.yml
+++ b/.github/workflows/deploy-ui-production.yml
@@ -1,10 +1,8 @@
 name: Build Docker Image & Deploy to Vercel
 
 on:
-  workflow_run:
-    workflows: ['Publish NPM Packages']
-    types:
-      - completed
+  release:
+    types: [published]
 
 env:
   UI_REGISTRY: ghcr.io
