feat: new version

--- a/packages/apps/package.json
+++ b/packages/apps/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@lecca-io/apps",
+  "name": "@lunnoa-automate/apps",
   "version": "0.45.0",
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
-    "@lecca-io/toolkit": "0.45.0"
+    "@lunnoa-automate/toolkit": "0.45.0"
   },
   "main": "./src/index.js",
   "types": "./src/index.d.ts",
