--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lecca-io/toolkit",
+  "name": "@lunnoa-automate/toolkit",
   "version": "0.45.0",
   "publishConfig": {
     "access": "public"
