--- a/.github/workflows/deploy-ui-production.yml
+++ b/.github/workflows/deploy-ui-production.yml
@@ -1,8 +1,10 @@
 name: Build Docker Image & Deploy to Vercel
 
 on:
-  release:
-    types: [published]
+  workflow_run:
+    workflows: ['Publish NPM Packages']
+    types:
+      - completed
 
 env:
   UI_REGISTRY: ghcr.io
