--- a/.github/workflows/deploy-ui-production.yml
+++ b/.github/workflows/deploy-ui-production.yml
@@ -32,9 +32,11 @@ jobs:
         with:
           version: 9
 
-      - name: Install Dependencies
-        run: pnpm install --frozen-lockfile
-
+      - name: Update Dependencies and Install
+        run: |
+            pnpm up @lunnoa-automate/apps@${{ env.VERSION }} @lunnoa-automate/toolkit@${{ env.VERSION }}
+            pnpm install --frozen-lockfile
+  
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
