feat: check vercel

--- a/.github/workflows/deploy-ui-production.yml
+++ b/.github/workflows/deploy-ui-production.yml
@@ -35,6 +35,7 @@ jobs:
       - name: Update Dependencies and Install
         run: |
             pnpm up @lunnoa-automate/apps@${{ env.VERSION }} @lunnoa-automate/toolkit@${{ env.VERSION }}
+            pnpm install -g pnpm nx
             pnpm install --frozen-lockfile
   
       - name: Log in to GitHub Container Registry
