feat: push with verbose

--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -36,7 +36,7 @@ jobs:
         run: pnpm nx build apps
 
       - name: Publish apps and toolkit using NX
-        run: pnpm nx run-many --target=nx-release-publish --projects=apps,toolkit
+        run: pnpm nx run-many --target=nx-release-publish --projects=apps,toolkit --verbose
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
