--- a/.github/workflows/deploy-ui-production.yml
+++ b/.github/workflows/deploy-ui-production.yml
@@ -37,6 +37,8 @@ jobs:
             pnpm up @lunnoa-automate/apps@${{ env.VERSION }} @lunnoa-automate/toolkit@${{ env.VERSION }}
             pnpm install -g pnpm nx
             pnpm install --frozen-lockfile
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
