--- a/.github/workflows/deploy-ui-production.yml
+++ b/.github/workflows/deploy-ui-production.yml
@@ -54,10 +54,14 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
+        id: build-image
         env:
           VERSION: ${{ github.ref_name }}
         run: |
-          docker build -t ${{ env.UI_REGISTRY }}/${{ env.UI_IMAGE_NAME }}:$VERSION -f packages/ui/Dockerfile .
+          docker build \
+            --build-arg NPM_TOKEN=${{ secrets.NPM_TOKEN }} \
+            -t ${{ env.UI_REGISTRY }}/${{ env.UI_IMAGE_NAME }}:$VERSION \
+            -f packages/ui/Dockerfile .
           docker tag ${{ env.UI_REGISTRY }}/${{ env.UI_IMAGE_NAME }}:$VERSION ${{ env.UI_REGISTRY }}/${{ env.UI_IMAGE_NAME }}:latest
           docker push ${{ env.UI_REGISTRY }}/${{ env.UI_IMAGE_NAME }}:$VERSION
           docker push ${{ env.UI_REGISTRY }}/${{ env.UI_IMAGE_NAME }}:latest
