--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -15,103 +15,78 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.8.1'
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@lunnoa-automate'
 
       - name: Setup PNPM
         uses: pnpm/action-setup@v2
         with:
           version: 9
 
+      - name: Configure .npmrc
+        run: |
+          echo "@lunnoa-automate:registry=https://npm.pkg.github.com" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+
       - name: Update Dependencies and Install
         run: |
           pnpm up @lunnoa-automate/apps@latest @lunnoa-automate/toolkit@latest
           pnpm install --frozen-lockfile
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build toolkit
         run: pnpm nx build toolkit
 
-      - name: list toolkit build output
+      - name: List toolkit build output
         run: ls -l packages/toolkit/dist || ls -l packages/toolkit/build || ls -l packages/toolkit
 
       - name: Build apps
         run: pnpm nx build apps
 
-      - name: list apps build output
+      - name: List apps build output
         run: ls -l packages/apps/dist || ls -l packages/apps/build || ls -l packages/apps
 
       - name: Publish toolkit
         run: pnpm nx run toolkit:nx-release-publish --verbose
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Wait for toolkit to be available on npm
-        run: |
-          VERSION=$(node -p "require('./packages/toolkit/package.json').version")
-          echo "Waiting for @lunnoa-automate/toolkit@$VERSION to be available on npm..."
-          timeout=300  # 5 minutes
-          interval=5
-          while true; do
-            result=$(curl -s -H "Authorization: Bearer $NODE_AUTH_TOKEN" "https://registry.npmjs.org/@lunnoa-automate/toolkit/$VERSION")
-            if echo "$result" | grep -q "\"version\""; then
-              echo "Toolkit is available!"
-              break
-            fi
-            if [ $timeout -le 0 ]; then
-              echo "Timeout waiting for toolkit to be available"
-              exit 1
-            fi
-            echo "Still waiting..."
-            sleep $interval
-            timeout=$((timeout - interval))
-          done
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish apps
         run: pnpm nx run apps:nx-release-publish --verbose
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Add this verification step at the end
-      - name: Wait for NPM packages to be available
+      # Verify packages
+      - name: Wait for GitHub Packages to be available
         run: |
           VERSION=$(node -p "require('./package.json').version")
-          echo "Waiting for NPM packages to be available..."
-          timeout=300  # 5 minutes timeout
-          interval=10  # Check every 10 seconds
+          echo "Waiting for GitHub Packages to be available..."
+          timeout=300
+          interval=10
 
-          # Wait for apps
-          while true; do
-            result=$(curl -s -H "Authorization: Bearer $NODE_AUTH_TOKEN" "https://registry.npmjs.org/@lunnoa-automate/apps/$VERSION")
-            if echo "$result" | grep -q "\"version\""; then
-              break
-            fi
-            if [ $timeout -le 0 ]; then
-              echo "Timeout waiting for @lunnoa-automate/apps@$VERSION to be available"
-              exit 1
-            fi
-            echo "Package @lunnoa-automate/apps@$VERSION not yet available, waiting..."
-            sleep $interval
-            timeout=$((timeout - interval))
-          done
+          check_package() {
+            pkg=$1
+            while true; do
+              result=$(curl -s -H "Authorization: Bearer $NODE_AUTH_TOKEN" \
+                "https://npm.pkg.github.com/@lunnoa-automate/$pkg")
+              if echo "$result" | grep -q "\"version\""; then
+                echo "$pkg@$VERSION is available!"
+                break
+              fi
+              if [ $timeout -le 0 ]; then
+                echo "Timeout waiting for $pkg@$VERSION"
+                exit 1
+              fi
+              echo "$pkg@$VERSION not yet available, waiting..."
+              sleep $interval
+              timeout=$((timeout - interval))
+            done
+          }
 
-          # Wait for toolkit
-          while true; do
-            result=$(curl -s -H "Authorization: Bearer $NODE_AUTH_TOKEN" "https://registry.npmjs.org/@lunnoa-automate/toolkit/$VERSION")
-            if echo "$result" | grep -q "\"version\""; then
-              break
-            fi
-            if [ $timeout -le 0 ]; then
-              echo "Timeout waiting for @lunnoa-automate/toolkit@$VERSION to be available"
-              exit 1
-            fi
-            echo "Package @lunnoa-automate/toolkit@$VERSION not yet available, waiting..."
-            sleep $interval
-            timeout=$((timeout - interval))
-          done
+          check_package "apps"
+          check_package "toolkit"
 
-          echo "Packages are available, first workflow complete"
+          echo "Packages are available, workflow complete"
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
