--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -12,6 +12,6 @@
   "license": "Apache-2.0 with Commons Clause",
   "repository": {
     "type": "git",
-    "url": "https://github.com/skelebud/lunnoa-automate"
+    "url": "https://npm.pkg.github.com/skelebud/lunnoa-automate"
   }
 }
